--- a/DecisionNav/wwwroot/css/site.css
+++ b/DecisionNav/wwwroot/css/site.css
@@ -62,4 +62,147 @@ body {
     color: #fff;
 }
 
+a.navbar-brand label.text-info {
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: 'Book Antiqua'
+}
+
+#global-nav {
+    line-height: 1
+}
+
+
+
+#site-header {
+    line-height: 1
+}
+
+    #site-header a {
+        padding-top: 0;
+        padding-bottom: 0
+    }
+
+#nav-title {
+    width: 100%;
+}
+
+    #nav-title li {
+        margin: 0 auto;
+    }
+
+
+footer .copyright h6 {
+    font-size: 0.8rem;
+}
+
+
+
+.sidebar-wrapper .sidebar-heading {
+    text-align: left;
+    padding: 1rem 1rem 0 1rem;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+#sidebar-wrapper {
+    min-height: 100vh;
+    /*margin-left: -15rem;*/
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+}
+
+    #sidebar-wrapper .sidebar-heading {
+        padding: 0.875rem 1.25rem;
+        font-size: 1.2rem;
+    }
+
+    #sidebar-wrapper .list-group {
+        /*width: 15rem;*/
+    }
+
+/*#page-content-wrapper {
+    min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}*/
+
+.navbar {
+    /*padding: 15px 10px;*/
+    /*background: #fff;*/
+    border: none;
+    border-radius: 0;
+    /*margin-bottom: 40px;*/
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+/* ---------------------------------------------------
+    FONTS
+----------------------------------------------------- */
+.afslogo-font {
+    font-family: 'Anton', serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 4rem;
+    text-shadow: 4px 4px 4px #aaa;
+}
+
+.bbtlogo-font {
+    font-family: 'Times New Roman', Times, serif;
+    color: #fff !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 3.2rem;
+    text-shadow: 4px 4px 4px #171718;
+    background: #770526;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.bbtlogo-font a {
+    font-family: 'Times New Roman', Times, serif;
+    color: #fff !important;
+}
+
+.afslogo-font sup {
+    font-size: 1.5rem;
+    vertical-align: super;
+    left: 0.7rem;
+}
+
+.afslogo-font sub {
+    font-family: 'Teko', serif;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+_:-ms-lang(x), .afslogo-font sup {
+    top: 0.1rem;
+}
+
+@supports (-ms-ime-align:auto) {
+    .afslogo-font sup {
+        top: 0.1rem;
+    }
+}
+
+.cl-white {
+    color: white;
+}
+
 
