--- a/DecisionNav/Views/Shared/_Layout.cshtml
+++ b/DecisionNav/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                 <span class="navbar-toggler-icon"></span>
                             </button>
 
-                            <div class="collapse justify-content-md-center navbar-collapse" id="topNavbarSupportedContent">
+                            <div class="collapse navbar-collapse" id="topNavbarSupportedContent" style>
                                 <partial name="_NavBarPartial" />
                             </div>
                         </div>
