--- a/DecisionNav/Views/Shared/_NavBarPartial.cshtml
+++ b/DecisionNav/Views/Shared/_NavBarPartial.cshtml
@@ -1,189 +1,9 @@
-<ul class="navbar-nav">
-    <li class="dropdown">
-        <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Business Development</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Loan Outstanding Growth</a></li>
-                    <li><a class="dropdown-item" href="#">Facility Usage Levels</a></li>
-                    <li><a class="dropdown-item" href="#">Maid and Paid</a></li>
-                    <li><a class="dropdown-item" href="#">Exposure Growth</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pricing Yield</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Risk-Adjusted Rate</a></li>
-                    <li><a class="dropdown-item" href="#">Risk-Adjusted Rate Variance</a></li>
-                    <li><a class="dropdown-item" href="#">Highest / Lowest Rates</a></li>
-                    <li><a class="dropdown-item" href="#">Fee Contribution to All-In Rate</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Pricing Fees</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Fee Mix</a></li>
-                    <li><a class="dropdown-item" href="#">Facility Fee Level</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Comparable Deals</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Comparable Deals (Facilities)</a></li>
-                    <li><a class="dropdown-item" href="#">Comparable Deals (Loans)</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Inventory</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Obligor List</a></li>
-                    <li><a class="dropdown-item" href="#">Credit Products by Obligor</a></li>
-                    <li><a class="dropdown-item" href="#">Largest Obligors by Exposure</a></li>
-                    <li><a class="dropdown-item" href="#">Largest Obligors by Loan Size</a></li>
-                    <li><a class="dropdown-item" href="#">Industry Groupings</a></li>
-                    <li><a class="dropdown-item" href="#">Highest Level Facilities</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
-                    <span>Credit Risk Monitoring</span>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Risk Rating Trend - Loan Outstandings</a></li>
-                    <li><a class="dropdown-item" href="#">Risk Rating Trend - Facility Exposure</a></li>
-                    <li><a class="dropdown-item" href="#">Risk Concentration - Loan Outstandings</a></li>
-                    <li><a class="dropdown-item" href="#">Risk Concentration - Facility Exposure</a></li>
-                    <li><a class="dropdown-item" href="#">Risk Rating Upgrades/Downgrades (Facilities)</a></li>
-                    <li><a class="dropdown-item" href="#">Risk Rating Upgrades/Downgrades (Loans)</a></li>
-                    <li><a class="dropdown-item" href="#">Delinquency Levels</a></li>
-                    <li><a class="dropdown-item" href="#">Delinquency Obligors</a></li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            Credit Pipeline Reporting
-        </div>
-    </li>
+<ul class="navbar-nav m-auto">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-fw fa-folder"></i>
-            <span>Application Value & Volume</span>
+            <span>Portfolio Analysis Tools</span>
         </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">Application Value & Volume by Status</a></li>
-            <li><a class="dropdown-item" href="#">Application Value & Volume by Organization</a></li>
-            <li><a class="dropdown-item" href="#">Application Value & Volume by Industry</a></li>
-            <li><a class="dropdown-item" href="#">Application Value & Volume by Geography</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Application Composition</span>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">Application Composition by Organization</a></li>
-            <li><a class="dropdown-item" href="#">Application Composition by Industry</a></li>
-            <li><a class="dropdown-item" href="#">Application Composition by Geography</a></li>
-            <li><a class="dropdown-item" href="#">Active Unit Query</a></li>
-            <li><a class="dropdown-item" href="#">In Process Events</a></li>
-            <li><a class="dropdown-item" href="#">Completed Events</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Turnaround Time</span>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">Application Turn Time to Decision by Organization</a></li>
-            <li><a class="dropdown-item" href="#">Application Turn Time to Booking by Organization</a></li>
-        </ul>
-    </li>
-
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Decision Metrics</span>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">% Approved, Declined & Withdrawn by Organization</a></li>
-            <li><a class="dropdown-item" href="#">% Approved, Declined & Withdrawn by Industry</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Opportunity Cost</span>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">Delayed Interest by Organization</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Advanced</span>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <li><a class="dropdown-item" href="#">Forward Funding</a></li>
-            <li><a class="dropdown-item" href="#">Advanced BPM</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Loan Officer Tools</span>
-        </a>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Show Loaded Views: 0</span>
-        </a>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Show Private Views: 0</span>
-        </a>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage My Account</span>
-        </a>
-    </li>
-</ul>
-    </li>
-</ul>
-
-
-
-<ul class="navbar-nav mr-auto">
-    <li class="dropdown">
-        <i class="fas fa-fw fa-folder"></i>
-        <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio Analysis Tools</a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -199,7 +19,6 @@
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
                     <span>Pricing Yield</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -211,7 +30,6 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
                     <span>Pricing Fees</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -221,7 +39,6 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
                     <span>Comparable Deals</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -231,7 +48,6 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
                     <span>Inventory</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -245,7 +61,6 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-fw fa-folder"></i>
                     <span>Credit Risk Monitoring</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -259,34 +74,75 @@
                     <li><a class="dropdown-item" href="#">Delinquency Obligors</a></li>
                 </ul>
             </li>
-
-
-
-
         </ul>
     </li>
-
-    <li class="dropdown">
-        <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio Analysis Tools</a>
+    <li class="nav-item dropdown">
+        <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-fw fa-folder"></i>
+            <span>Credit Pipeline Reporting</span>
+        </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>Application Value & Volume</span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <li><a class="dropdown-item" href="#">Application Value & Volume by Status</a></li>
+                    <li><a class="dropdown-item" href="#">Application Value & Volume by Organization</a></li>
+                    <li><a class="dropdown-item" href="#">Application Value & Volume by Industry</a></li>
+                    <li><a class="dropdown-item" href="#">Application Value & Volume by Geography</a></li>
+                </ul>
+            </li>
             <li class="dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span>Business Development</span>
+                    <span>Application Composition</span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <li><a class="dropdown-item" href="#">Loan Outstanding Growth</a></li>
-                    <li><a class="dropdown-item" href="#">Facility Usage Levels</a></li>
-                    <li><a class="dropdown-item" href="#">Maid and Paid</a></li>
-                    <li><a class="dropdown-item" href="#">Exposure Growth</a></li>
+                    <li><a class="dropdown-item" href="#">Application Composition by Organization</a></li>
+                    <li><a class="dropdown-item" href="#">Application Composition by Industry</a></li>
+                    <li><a class="dropdown-item" href="#">Application Composition by Geography</a></li>
+                    <li><a class="dropdown-item" href="#">Active Unit Query</a></li>
+                    <li><a class="dropdown-item" href="#">In Process Events</a></li>
+                    <li><a class="dropdown-item" href="#">Completed Events</a></li>
                 </ul>
             </li>
-
+            <li class="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     <span>Turnaround Time</span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <li><a class="dropdown-item" href="#">Application Turn Time to Decision by Organization</a></li>
+                    <li><a class="dropdown-item" href="#">Application Turn Time to Booking by Organization</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>Decision Metrics</span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <li><a class="dropdown-item" href="#">% Approved, Declined & Withdrawn by Organization</a></li>
+                    <li><a class="dropdown-item" href="#">% Approved, Declined & Withdrawn by Industry</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>Opportunity Cost</span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <li><a class="dropdown-item" href="#">Delayed Interest by Organization</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>Advanced</span>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <li><a class="dropdown-item" href="#">Forward Funding</a></li>
+                    <li><a class="dropdown-item" href="#">Advanced BPM</a></li>
+                </ul>
+            </li>
         </ul>
     </li>
-
-
-
-
 
     <li><a href="#">Service</a></li>
 </ul>
