--- a/DecisionNav/Views/Home/Index.cshtml
+++ b/DecisionNav/Views/Home/Index.cshtml
@@ -1,8 +1,24 @@
-﻿@{
+﻿@model IEnumerable<DecisionNav.Models.ViewModels.NavigationListViewModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+    <div class="text-center">
+
+        <div>
+            @await Component.InvokeAsync("NavigationList", new { maxPriority = 3, isDone = false })
+        </div>
+
+        @*<div>
+            @await Component.InvokeAsync("PriorityList", new { maxPriority = 3, isDone = false })
+        </div>*@
+
+
+
+
+
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
