--- a/DecisionNav/wwwroot/css/site.css
+++ b/DecisionNav/wwwroot/css/site.css
@@ -2,62 +2,66 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 .bg-black {
     background: #000;
 }
+
 .cl-white {
     color: #fff;
 }
@@ -139,6 +143,7 @@ footer .copyright h6 {
     /*margin-bottom: 40px;*/
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
 .navbar-btn {
     box-shadow: none;
     outline: none !important;
@@ -174,10 +179,10 @@ footer .copyright h6 {
     padding-right: 1rem;
 }
 
-.bbtlogo-font a {
-    font-family: 'Times New Roman', Times, serif;
-    color: #fff !important;
-}
+    .bbtlogo-font a {
+        font-family: 'Times New Roman', Times, serif;
+        color: #fff !important;
+    }
 
 .afslogo-font sup {
     font-size: 1.5rem;
@@ -208,7 +213,7 @@ _:-ms-lang(x), .afslogo-font sup {
 .nav-item.dropdown .dropdown-toggle::after {
     width: 1rem;
     text-align: center;
-    right:0;
+    right: 0;
     vertical-align: 0px;
     border: 0;
     font-weight: 900;
@@ -217,6 +222,6 @@ _:-ms-lang(x), .afslogo-font sup {
     /*border: blue 1px solid;*/
 }
 
-
-
-
+ul.dropdown-menu li.nav-item a span {
+    /*white-space: nowrap;*/
+}
